# anime-base

./: .gitignore  CLAUDE.md  opencode.json
.claude/: settings.json  vault-manifest.yaml
.claude/modules/vault-semantic/mcp/: .gitignore  README.md  pyproject.toml
.claude/modules/vault-semantic/mcp/src/vault_semantic/: __init__.py  chunking.py  embedding.py  indexer.py  lemmatizer.py  models.py  search.py  server.py
.claude/modules/vault-semantic/mcp/src/vault_semantic/schema/migrations/: 001_init.sql
.obsidian/: bookmarks.json  community-plugins.json  graph.json  types.json  workspace.json
ANIME/: Haitokuzuma.md  Maria-sama_ga_Miteru.md  Maria-sama_ga_Miteru_3rd.md  Maria-sama_ga_Miteru_4th.md  Maria-sama_ga_Miteru_Haru.md  Nausicaa_of_the_Valley_of_the_Wind.md  Violet_Evergarden.md  Violet_Evergarden_Eternity_and_the_Auto_Memory_Doll.md  Violet_Evergarden_Kitto_Ai_wo_Shiru_Hi_ga_Kuru_no_Darou.md
CHARACTERS/: Alberta.md  Arisugawa_Kintaro.md  Asbel.md  Benedict_Blue.md  Cattleya_Baudelaire.md  Charlotte_Abelfreyja_Drossel.md  Damian_Baldur_Flugel.md  Dietfried_Bougainvillea.md  Erica_Brown.md  Evergarden_Violet.md  Fukuzawa_Yumi.md  Fukuzawa_Yuuki.md  Gilbert_Bougainvillea.md  Hasekura_Rei.md  Hodgins_Claudia.md  Hosokawa_Kanako.md  Iris_Cannary.md  Kanina_Shizuka.md  Kashiwagi_Suguru.md  King_Jihl.md  King_Vai.md  Kubo_Shiori.md  Kurotowa.md  Kushana.md  Lastelle.md  Leon_Stephanotis.md  Magnolia_Ann.md  Magnolia_Clara.md  Marlborough_Luculia.md  Mizuno_Yoko.md  Nausicaa.md  Nijou_Noriko.md  Ogasawara_Sachiko.md  Olivia_Webster.md  Omoi_Natsumi.md  Oscar_Webster.md  Russell_Bailey.md  Sato_Sei.md  Takeshima_Tsutako.md  Torii_Eriko.md  (+4 more)
MANGA/: Maria-sama_ga_Miteru_(manga).md
PERSONS/: Hayao_Miyazaki.md  Isao_Takahata.md  Joe_Hisaishi.md  Kana_Akatsuki.md  Kana_Ueda.md  Miki_Itou.md  Oyuki_Konno.md  Taichi_Ishidate.md  Yukihiro_Matsushita.md
STUDIOS/: Studio_Deen.md  Topcraft.md
SYSTEM/: enums.yaml  (+14 more)
(+159 files in other folders)
